--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,25 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-
-
-@font-face {
-    font-family: 'InterRegular';
-    src: local('Inter'), url(./assets/fonts/Inter-Regular.ttf) format('truetype');
+font-face {
+  font-family: "InterRegular";
+  src: local("Inter"), url(./assets/fonts/Inter-Regular.ttf) format("truetype");
 }
 
 @font-face {
-    font-family: 'InterBold';
-    font-weight: 900;
-    src: local('Inter'), url(./assets/fonts/Inter-Bold.ttf) format('truetype');
+  font-family: "InterBold";
+  font-weight: 900;
+  src: local("Inter"), url(./assets/fonts/Inter-Bold.ttf) format("truetype");
 }
 
 @font-face {
-    font-family: 'InterBlack';
-    font-weight: 900;
-    src: local('Inter'), url(./assets/fonts/Inter-Black.ttf) format('truetype');
+  font-family: "InterBlack";
+  font-weight: 900;
+  src: local("Inter"), url(./assets/fonts/Inter-Black.ttf) format("truetype");
+}
+
+.img {
+  width: 155px;
+  height: 150px;
 }
